[package]
name = "actor"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/actor"

[lib]
name = "actor"
path = "lib.rs"

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["async-await-macro"] }
async-oneshot = "0.5"
async-channel = "1.7"
actor-core = { path = "../actor-core" }
