[package]
name = "actor"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/actor"

[lib]
name = "actor"
path = "lib.rs"

[dependencies]
actor-core = { path = "../core" }
async-global-executor = { version = "2", optional = true }
async-channel = "2"
async-oneshot = "0.5"
# async-oneshot = "0.6" # reduce deps
blocking = { version = "1", optional = true }

[features]
sync = ["blocking"]
async = ["async-global-executor"]
